--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Psychoanalysis'
 - !lcc 'BF'
+- GITenberg
 title: Eine Schwierigkeit der Psychoanalyse
 url: http://www.gutenberg.org/ebooks/29097
